<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Passly</string>
    <string name="help_website"
        translatable="false">https://help.passbolt.com/</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="got_it">Got it</string>
    <string name="try_again">Try again</string>
    <string name="continue_label">Continue</string>
    <string name="copied_info">%s copied!</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
...
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very strong</string>

    <string name="password_description_encrypted">Description is encrypted</string>
    <string name="input_default_hint">Enter %s</string>

    <string name="help_menu_help">Help</string>
    <string name="help_menu_access_logs">Access the logs</string>
    <string name="help_menu_visit_help_website">Visit help site</string>
    <string name="help_menu_why_scan_codes">Why scanning QR codes?</string>
    <string name="help_menu_enable_debug_logs">Enable debug logs</string>
    <string name="help_menu_import_profile_manually">Import your account manually</string>
    <string name="help_menu_import_account_kit">Import your account kit</string>

    <string name="logs_share_title">Share logs</string>
    <string name="logs_share_email_title">Passly logs</string>
    <string name="logs_share_email">contact@passbolt.com</string>
...
    <string name="licenses_licensees">Licenses</string>
    <string name="licenses_urls">Urls</string>

    <string name="cancel_setup">Cancel setup</string>
    <string name="continue_setup">Continue setup</string>

    <string name="welcome_title">Welcome!</string>
    <string name="welcome_body">You need an existing account to get started. Sign in with your existing account on the desktop browser extension to connect it with the mobile device.</string>
    <string name="welcome_connect_to_existing_account">Connect to an existing account</string>
    <string name="welcome_no_account">I don’t have an account</string>
    <string name="welcome_create_account_dialog_title">How to create an account?</string>
    <string name="welcome_create_account_dialog_message">It is currently not possible to create an account using the mobile app. First you will need create an account using your desktop browser extension.</string>

    <string name="transfer_details_header">Scan QR codes to transfer your account details</string>
    <string name="transfer_details_scan_button">Scan QR codes</string>
    <string name="transfer_details_camera_access_dialog_title">Camera access required</string>
    <string name="transfer_details_camera_required_dialog_title">Camera required</string>
    <string name="transfer_details_camera_required_dialog_message">Sorry, you need a device with a camera to continue, as the key transfer is done using QR codes.</string>
    <string name="transfer_details_camera_access_dialog_message">Please provide permissions to the Passly application to access the camera in your settings.</string>

    <string name="scan_qr_exit_confirmation_dialog_message">If you leave, you will need to scan QR codes again.</string>
...
    <string name="browser_first_login_scan_error">Could not read this browser login QR code</string>
    <string name="browser_first_login_success">Browser extension authorized</string>
    <string name="browser_first_login_failure">Could not authorize browser extension</string>

    <string name="transfer_account_cancel_button">Cancel transfer</string>
    <string name="transfer_account_stop_button">Stop transfer</string>
    <string name="transfer_account_title">Transfer account details</string>
    <string name="transfer_account_stop_confirmation_dialog_message">If you leave, you will need to scan QR codes again.</string>
    <string name="transfer_account_could_not_initialize_parameters">Could not initialize transfer parameters</string>
    <string name="transfer_account_could_not_create_transfer_format">Could not create transfer. %s </string>
    <string name="transfer_account_could_not_initialize_qr_code_page_data">Could not initialize QR code page data</string>
    <string name="transfer_account_error_during_fetch_transfer_format">Could not fetch transfer details. %s</string>

...
