package net.svaroh.passly.testtags.composetags

object HomeAppBar {
    const val ICON = "HomeAppBarIcon"
}
