...
 * @since v1.0
 */

package net.svaroh.passly.testtags.composetags

object BottomNav {
    const val HOME_TAB = "BottomNavHomeTab"
    const val OTP_TAB = "BottomNavOtpTab"
    const val SETTINGS_TAB = "BottomNavSettingsTab"
}

